WebSocket communication works.
The full flow
Browser -> WebSocket -> Rust -> JavaScript -> Rust -> WebSocket -> Browser
works.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ serde = "0.9"
 serde_derive = "0.9"
 serde_json = "0.9"
 ws = "*"
+
+[dependencies.js]
+git = "https://github.com/servo/rust-mozjs.git"
