--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Volker Mische <volker.mische@gmail.com>"]
 serde = "0.9"
 serde_derive = "0.9"
 serde_json = "0.9"
+unix_socket = "0.5.0"
 ws = "*"
 
 [dependencies.js]
