Just committing this for now
I can't remember in which state the code currently is, but it
seems to work. Hence I just commit it and go from there.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["Volker Mische <volker.mische@gmail.com>"]
 serde = "0.9"
 serde_derive = "0.9"
 serde_json = "0.9"
+#serde = "*"
+#serde_derive = "*"
+#serde_json = "*"
 ws = "*"
 
 [dependencies.js]
